# kernel-Mini-Operating-System

./: README.md  XML parsing in Python.ipynb  helloworld  helloworld.rs
Concepts/: Cargo.toml
Concepts/src/: main.rs
ENUMS_PATTERN/: Cargo.toml
ENUMS_PATTERN/src/: main.rs
GenericTypes/: Cargo.toml
GenericTypes/GenericTypes/: Cargo.toml
GenericTypes/src/: Generix.rs  Struct.rs  main.rs
GenericTypes/src/Traits/src/: .main.rs.swp
Guessing_game/: Cargo.toml
Guessing_game/src/: main.rs
Lifetimes/: Cargo.toml
Lifetimes/src/: main.rs
OperatingSystem/: Cargo.toml
OperatingSystem/src/: main.rs  vga_buffer.rs  x86_64-os.json
OperatingSystem/src/.cargo/: config.toml
OwnerShip/src/: main.rs
Traits/src/: main.rs
adder/src/: lib.rs
adder/tests/: integration_tests.rs
adder/tests/common/: setup.rs
madelbrote/src/: main.rs
minigrp/: Cargo.toml
minigrp/src/: main.rs  peom.txt
rustQuant/: Cargo.toml
struct_data_structure/: Cargo.toml
struct_data_structure/src/: main.rs
