[package]
name = "OperatingSystem"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
[target.'cfg(target_os = "macos")']
rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
